--- a/src/pages/RoutePlanner/RoutePlanner.module.scss
+++ b/src/pages/RoutePlanner/RoutePlanner.module.scss
@@ -35,9 +35,12 @@
     flex: 1;
     border-top: 1px solid #dbdbdb;
     position: relative;
-    padding-top: 60px;
     display: flex;
     flex-direction: column;
+  }
+
+  &__mapData {
+    padding-top: 60px;
   }
 
   &__reverse {
@@ -70,7 +73,7 @@
   }
 
   &__actions {
-    padding: 20px;
+    padding: 0 20px 20px 20px;
     display: flex;
     justify-content: space-between;
   }
@@ -100,7 +103,6 @@
 
   &__uploadImage {
     display: flex;
-    margin-top: 20px;
-    padding: 0 20px;
+    padding: 20px;
   }
 }
